<resources>
    <string name="app_name">MVPUserProfile</string>

    <string name="some_error">Some Error Occurred!</string>

    <!-- Login -->
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <!--Login Validation-->
    <string name="empty_email">Please provide a non empty email.</string>
    <string name="invalid_email">Please provide a valid email.</string>
    <string name="empty_password">Please provide a non empty password.</string>

    <!-- Home -->
    <string name="logout">Logout</string>
    <string name="website">website</string>
    <string name="user_name">userName</string>
    <string name="dob">Date of birth</string>
    <string name="phone">phone number</string>

    <!-- Splash screen -->
    <string name="msg_1">User Profile Viewer</string>
    <string name="msg_2">MVP Tutorial - phase 1</string>
    <string name="author_name">Amjad Omari</string>
</resources>
