<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_splash"
    android:gravity="center"
    tools:context="com.amjadomari.mvpuserprofile.ui.splash.SplashActivity">

    <TextView
        android:id="@+id/msg_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/msg_1"
        android:textColor="@color/cardview_dark_background"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/msg_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/msg_1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/msg_2"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author_name"
        android:layout_below="@+id/msg_2"
        android:textColor="@color/cardview_dark_background"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>
</RelativeLayout>
